--- a/machidesignAPI/machidesignAPI.csproj
+++ b/machidesignAPI/machidesignAPI.csproj
@@ -128,7 +128,10 @@
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -163,26 +166,14 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\JichitaisController.cs" />
-    <Compile Include="Controllers\MachiarukiDatasController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="machidesignDBContext.cs" />
-    <Compile Include="Models\Account.cs" />
-    <Compile Include="Models\Events.cs" />
-    <Compile Include="Models\Group.cs" />
-    <Compile Include="Models\Jichitai.cs" />
-    <Compile Include="Models\Machiaruki.cs" />
-    <Compile Include="Models\MachiarukiData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\machidesign.mdf" />
-    <Content Include="App_Data\machidesign_log.ldf">
-      <DependentUpon>machidesign.mdf</DependentUpon>
-    </Content>
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
