--- a/machidesignAPI/machidesignAPI.csproj
+++ b/machidesignAPI/machidesignAPI.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -128,10 +129,7 @@
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -166,19 +164,67 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\JichitaisController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Accounts.cs">
+      <DependentUpon>machidesignModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Events.cs">
+      <DependentUpon>machidesignModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Groups.cs">
+      <DependentUpon>machidesignModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Jichitais.cs">
+      <DependentUpon>machidesignModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\MachiarukiDatas.cs">
+      <DependentUpon>machidesignModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Machiarukis.cs">
+      <DependentUpon>machidesignModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\machidesignModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>machidesignModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\machidesignModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>machidesignModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\machidesignModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>machidesignModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\machidesign.mdf" />
+    <Content Include="App_Data\machidesign_log.ldf">
+      <DependentUpon>machidesign.mdf</DependentUpon>
+    </Content>
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Models\machidesignModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>machidesignModel.edmx</DependentUpon>
+      <LastGenOutput>machidesignModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\machidesignModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>machidesignModel.edmx</DependentUpon>
+      <LastGenOutput>machidesignModel.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
@@ -200,6 +246,13 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <EntityDeploy Include="Models\machidesignModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>machidesignModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\machidesignModel.edmx.diagram">
+      <DependentUpon>machidesignModel.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -224,7 +277,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
