外部キーを外す

--- a/machidesignAPI/Web.config
+++ b/machidesignAPI/Web.config
@@ -28,7 +28,8 @@
   </system.webServer>
   <connectionStrings>
     <add name="machidesignDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\machidesign.mdf;Initial Catalog=machidesign;Integrated Security=True" providerName="System.Data.SqlClient" />    
-  <add name="machidesignEntities" connectionString="metadata=res://*/Models.machidesignModel.csdl|res://*/Models.machidesignModel.ssdl|res://*/Models.machidesignModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\machidesign.mdf;initial catalog=machidesign;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+ 
+  <add name="machidesignEntities" connectionString="metadata=res://*/Models.machidesignModel.csdl|res://*/Models.machidesignModel.ssdl|res://*/Models.machidesignModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\machidesign.mdf;initial catalog=machidesign;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
